--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,16 @@
-
     <nav>
       <p>Categories</p>
       <li><a href="https://weather.com/en-AU/weather/today/l/ASXX0023:1:AS?Goto=Redirected">Weather</a></li>
       <li><a href="#">Data</a></li>
     </nav>
     <article>
-      <h2>The Best IoT Weather App</h2>
+      <h2>Deakin's Weather App</h2>
       <img src="assets/yellow-umbrella.png" width="75px" alt="article banner">
     </article>
     <aside>
       <ul>
-        <li>
-          <p><strong>Weather Now</strong></p>
+        <li> 
+          <p><strong>Deakin's 24/7 Around The World Weather App</strong></p>
         </li>
         <li>
           <!-- <p>Time: <span id="time2"><%= obj.updateTime %></span><br /></p> -->
@@ -28,9 +27,10 @@
           <p>Location: <%= obj.location %><br /></p>
         </li>
         <li>
-          <p><strong>Writted by:</strong></p>
-          <p>Storm Rhyma</p>
+          <p><strong>Written by: Deakin Fisher</strong></p>
+          
         </li>
       </ul>
     </aside>
+
 
